deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guitar-scale-generator
  namespace: guitar
  labels:
    app.kubernetes.io/name: guitar-scale-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: guitar-scale-generator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guitar-scale-generator
    spec:
      nodeSelector:
        kubernetes.io/hostname: kccontrol
      containers:
        - name: web
          image: git.denley.nz/oldn3rd/guitar-scale-generator:0.1.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
